--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <a href="index.html" class="logo">
-            <img src="ukuphila Kwakandengezi development logo.jpg" alt="Ukuphila KwakaNdengezi Development Logo" style="width:80px; height:80px; border-radius:70%; margin-right:10px;">
+            <img src="./Assets/ukuphila Kwakandengezi development logo.jpg" alt="Ukuphila KwakaNdengezi Development Logo" style="width:80px; height:80px; border-radius:70%; margin-right:10px;">
         </a>
         
         <ul class="nav-links">
@@ -45,7 +45,7 @@
             <div class="founders">
                 <div class="founder-card">
                     <div class="founder-image">
-                        <img src="pastor.jpg" alt="Pastor Lamula">
+                        <img src="./Assets/pastor.jpg" alt="Pastor Lamula" style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <h4 class="founder-name">Pastor Lamula</h4>
                     <p class="founder-role">Chairperson & Co-Founder</p>
@@ -54,7 +54,7 @@
                 
                 <div class="founder-card">
                     <div class="founder-image">
-                        <img src="lady_pastor.jpg" alt="Lady Pastor Lamula">
+                        <img src="./Assets/lady_pastor.jpg" alt="Lady Pastor Lamula" style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <h4 class="founder-name">Lady Pastor Lamula</h4>
                     <p class="founder-role">Co-Founder & Women's Program Director</p>
